--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title: Corn Disease Detector (CDD)
 email: ai2021grupo7[at]gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  CDD is a deep learning model which identifies diseases in corn using 
-  machine vission. This project is part of Saturdays AI Quito 2021 coursework.
+  Early plant disease detector model built using neural networks. Saturdays AI Quito 2021.
   
 github_username:  corndiseasedetector
 
